# Stegnocode

./: .gitmodules  CMakeLists.txt  LICENSE  main.cpp
doc/: asm.md  steganografer.md  stegasm.md
examples/fibonacci/: fibo.stegasm  fibonacci.md
examples/files/: files.md
examples/files/readfile/: readfile.stegasm  readfile_example_file
examples/files/writefile/: writefile.stegasm
examples/tetris/: tetris.stegasm
examples/tetris/game/: game_over.stegasm  level.stegasm  lines.stegasm  map.stegasm  score.stegasm  stats.stegasm
examples/tetris/game/blocks/: block_definition.stegasm  choose_random_next_block.stegasm  draw_alive_block.stegasm  draw_current_block.stegasm  draw_next_block.stegasm  move_next_to_current.stegasm  (+1 more)
examples/tetris/utils/: display_string.stegasm  number_in_string.stegasm
libs/stegcommon/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Logger.cpp  Logger.h  Observable.h
src/handlers/: FileHandler.cpp  IHander.h
src/utils/: Parameters.cpp  Parameters.h
steg/: CMakeLists.txt
steg/src/: exceptions.h  main.cpp
steg/src/ast/: ASTExpressionNode.cpp  ASTExpressionNode.h  ASTNode.h  ASTProgramNode.cpp  ASTProgramNode.h  ASTStatementNode.cpp  ASTStatementNode.h
steg/src/lexer/: Lexer.cpp  Lexer.h  TextParser.cpp  TextParser.h  lexer_definitions.h
steganographer/handlers/: CodeHandler.cpp  FileHandler.cpp  FileHandler.h  StringHandler.cpp  StringHandler.h  handlers.h
steganographer/images/: Image.cpp  Image.h  Pixels.h  pixel.h  pixels.h
steganographer/steganographer/: Header.hpp  Random32.h  SequenceManager.cpp  SequenceManager.h  Steganographer.cpp  Steganographer.h  constant.h
steganographer/steganographer/sequences/: ReadSequence.cpp  ReadSequence.h  WriteSequence.cpp  WriteSequence.h
stegasm/: CMakeLists.txt
stegasm/src/: instructions.cpp  instructions.h  main.cpp
stegasm/src/assembler/: Assembler.cpp  Assembler.h  Linter.cpp  Linter.h  TextParser.cpp
stegasm/src/compiler/: Compiler.cpp  Compiler.h
stegasm/src/interpreter/: Loader.cpp  Loader.h  Vm.cpp  exceptions.h
test/: CMakeLists.txt  test_cli_parameters.cpp  test_steganographer.cpp
(+37 files in other folders)
